flux/infrastructure/data/minio/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    app.kubernetes.io/name: minio
    pod-security.kubernetes.io/enforce: restricted
