flux/infrastructure/data/minio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
  labels:
    app.kubernetes.io/name: minio
spec:
  selector:
    app.kubernetes.io/name: minio
  ports:
    - { name: s3, port: 9000, targetPort: s3 }
    - { name: console, port: 9001, targetPort: console }
